# sonolbot

./: .env.example  .gitignore  README.md  build_control_panel_exe.bat  control_panel.bat  control_panel.spec  control_panel_launcher.py  daemon_control_panel.py  daemon_service.py  get_my_id.py  mybot_autoexecutor.sh  process_pending.py  pyproject.toml  requirements.txt  setup[관리자권한으로실행].bat  setup_admin.bat  setup_wsl.sh  skill_bridge.py  todo.md  실행방법.txt
.codex/prompts/: task-activate.md
.codex/skills/canvas-design/: approval.txt  security_report.json
.codex/skills/webapp-testing/: generate_thumbnails.py
agent_runtime/: AGENTS.md  AGENTS__FOR_CODER.md
agent_runtime/.codex/prompts/: task-activate.md  task-list.md
docs/: analysis-summary.md  project-analysis.md
scripts/: backfill_task_display_fields.py  check_docs_alignment.py  configure_wsl_dns.ps1  migrate_tasks_to_thread.py  setup_messages.ps1
src/sonolbot/: __init__.py  cli.py  runtime.py
src/sonolbot/core/: bot_config_store.py  control_panel_launcher.py  daemon_control_panel.py  daemon_service.py  get_my_id.py  process_pending.py  quick_check.py  skill_bridge.py
src/sonolbot/scripts/: __init__.py  build_control_panel_exe.py  configure_wsl_dns.py  control_panel.py  mybot_autoexecutor.py  setup_admin.py  (+2 more)
tests/: test_manager_utils.py  test_service_app_runtime_di.py  test_service_core_runtime_di.py  test_service_core_signature_di.py  test_service_lease_runtime_di.py  test_service_rewriter_runtime_di.py  test_service_task_runtime_di.py  test_service_telegram_runtime_di.py  test_service_utils.py
(+26 files in other folders)
